update permissions for defect registration, created defect status update endpoint
